src/test/ui/parser/increment-notfixed.stderr
error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:11:16
   |
LL |     foo.bar.qux++;
   |                ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = foo.bar.qux; foo.bar.qux += 1; tmp };
   |     +++++++++++            ~~~~~~~~~~~~~~~~~~~~~~~~~
help: or, if you don't need to use it as an expression, change it to this
   |
LL -     foo.bar.qux++;
LL +     foo.bar.qux += 1;
   | 

error: Rust has no prefix increment operator
  --> $DIR/increment-notfixed.rs:18:5
   |
LL |     ++foo.bar.qux;
   |     ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     ++foo.bar.qux;
LL +     foo.bar.qux += 1;
   | 

error: aborting due to 2 previous errors

